tests/golden/parse_errors/record_pattern_missing_colon.cd
struct Person { name: string }
let person = Person { name: "Ada" };
print match person {
  Person { name } => "bad",
  _ => "fallback",
};
